# Triplets-Oversampling

./: .gitignore  README.md  prepare_venv.sh  pyproject.toml  requirements.txt  run_cl.sh  run_cl_svm.py  run_fl.sh  run_fl_nn.py  run_svm.py  run_svm.sh  synthesis_quality.ipynb
src/: cl_data.py  cl_download_data.py  cl_test_convert_binary_datasets.py  cl_to_binary_csv.py  cl_train_svm.py  config.yaml  data.py  fl_alexNet.py  fl_config.py  fl_data.py  fl_fedAvg.py  fl_metrics.py  fl_tools.py  samplers.py  test_convert_binary_datasets.py  to_binary_csv.py  train_svm.py
