[project]
name = "triplets-oversampling"
version = "0.1.0"
description = "Triplet oversampling for imbalanced datasets"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "imbalanced-learn==0.10.1",
    "numpy==1.21.6",
    "pandas==1.3.5",
    "pyyaml==6.0",
    "requests==2.27.1",
    "scikit-learn==1.2.2",
    "scipy==1.11.1",
    "torch==1.11",
    "torchmetrics==0.10.1",
    "torchvision==0.12",
]
